Candidate yaklasiminda Interviewed Applicant yaklasimina gevilmesi sebebiyle tum kodlarda bakim yapildi. Faaliyete uygun isimlendirmeler ile yapilan isin anlasilmasi icin gerekli oldugundan onemli bir guncellestirmedir. Kapsamli bir guncelleme oldugu icin, ilerleyen yerlerde bir sorunla karsilasilmasi durumunda potansiyle hata bolgesi olarak degerlendirilebilir!!!

--- a/4-Google_Form_(Evaluation)Installation/evaluationIsUpdatedTemplate.html
+++ b/4-Google_Form_(Evaluation)Installation/evaluationIsUpdatedTemplate.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Merhaba,</p>
-    <p><?= candidateName ?> <?= candidateSurname ?> isimli adayla ilgili değerlendirme güncellemeniz başarıyla alınmıştır.</p>
+    <p><?= applicantName ?> <?= applicantSurname ?> isimli adayla ilgili değerlendirme güncellemeniz başarıyla alınmıştır.</p>
     <p>Teşekkür ederiz.</p>
     <p>WeRHere Organization</p>
   </body>
