--- a/3-Calendar_AppScript_Installation/evaluationMailTemplate.html
+++ b/3-Calendar_AppScript_Installation/evaluationMailTemplate.html
@@ -5,17 +5,17 @@
   </head>
   <body>
     <p>Merhaba Sayin <?= mentorName ?> <?= mentorSurname ?>,</p>
-    <p>Adayla yaptiginiz gorusme sonunda, asagida sundugumuz linkte yer alan formu doldurmanizi rica ederiz.</p>
+    <p>Basvuranla yaptiginiz gorusme sonunda, asagida sundugumuz linkte yer alan formu doldurmanizi rica ederiz.</p>
 
     <p>LINK: https://docs.google.com/forms/d/e/1FAIpQLSc3EXB735dC2UieNq0zUB1Qb2aHb2fAtjZ2j9awPpzjDYdcwA/viewform?usp=sf_link<br>
 
     <p>
-    <u>Gorusme yapacaginiz aday bilgileri:</u><br>
-    Aday Ad &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: '<b><?= candidateName ?></b>'<br>
-    Aday Soyad : '<b><?= candidateSurname ?></b>'<br>
-    Aday Email &nbsp;: '<b><?= candidateMail ?></b>'<br>
+    <u>Gorusme yapacaginiz basvuran bilgileri:</u><br>
+    Basvurucu Ad &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: '<b><?= attendeeName ?></b>'<br>
+    Basvurucu Soyad : '<b><?= attendeeSurname ?></b>'<br>
+    Basvurucu Email &nbsp;: '<b><?= attendeeMail ?></b>'<br>
     </p>
-    <p><u>Onemli Not:</u> Formdaki aday email bilgisini dikkatlice doldurmaniz gerekmektedir. (Tirnak isaretleri dahil degil!)</p>
+    <p><u>Onemli Not:</u> Formdaki basvuran email bilgisini dikkatlice doldurmaniz gerekmektedir. (Tirnak isaretleri dahil degil!)</p>
 
     <p>WeRHere Organization</p>
   </body>
