--- a/4-Google_Form_(Evaluation)Installation/evaluationIsRecordedTemplate.html
+++ b/4-Google_Form_(Evaluation)Installation/evaluationIsRecordedTemplate.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Merhaba,</p>
-    <p><?= candidateName ?> <?= candidateSurname ?> isimli adayla ilgili değerlendirmeniz başarıyla alinmistir.</p>
+    <p><?= applicantName ?> <?= applicantSurname ?> isimli adayla ilgili değerlendirmeniz başarıyla alinmistir.</p>
     <p>Teşekkür ederiz.</p>
     <p>WeRHere Organization</p>
   </body>
