Period'a gore proje dosyalarinin paylasilacagi ve saklanacagi klasor adi periodun adi olacak sekilde otomatiklestirildi. Bununla ilgili farkli modullerde degismesi gereken kodlar da degistirildi

--- a/VIT_Module/3-Calendar_AppScript_Installation/fatalErrorAboutConfigurationSheetTemplate.html
+++ b/VIT_Module/3-Calendar_AppScript_Installation/fatalErrorAboutConfigurationSheetTemplate.html
@@ -9,7 +9,11 @@
     </p>
 
     <p>
-      Google Drive CRM Projesinin bulundugu klasorde yer alan <strong><?= configurationSheetName ?></strong> sheet dosyasindaki verilerle ilgili kritik bir hata vardir(Muhtemelen bos veri). Lutfen ivedilikle bu dosyanin verilerini kontrol edin. Elle veya CRM Python uygulamasi araciligiyla, proje odev dosyalarinin yuklenecegi klasor ismini ve odev projelerinin son teslim tarihi bilgilerini girin...
+      Google Drive CRM Projesinin bulundugu klasorde yer alan <strong><?= configurationSheetName ?></strong> sheet dosyasindaki verilerle ilgili kritik bir hata vardir. Lutfen ivedilikle bu dosyanin verilerini kontrol edin. Elle veya CRM Python uygulamasi araciligiyla, proje odev dosyalarinin yuklenecegi klasor ismini ve odev projelerinin son teslim tarihi bilgilerini girin...
+      <br><br>
+      <u>Olasi Sorunlar</u>:<br>
+      1- Proje Odevlerinin ilgli period  klasorune yuklenecegi ana klasor(Project Homeworks Parent Folder Name) ismi alani bos olabilir,<br>
+      2- Proje odevi son teslim tarihi eski bir tarih olabilir veya bu hucre de bostur.
     </p>
 
     <p>
