En son basvuru formu esas alinarak baglantili tum kodlar guncellendi (ve yeni fonksiyonlar eklendi)

--- a/VIT_Module/3-Calendar_AppScript_Installation/projectHomeworkEvaluationFormMailTemplate.html
+++ b/VIT_Module/3-Calendar_AppScript_Installation/projectHomeworkEvaluationFormMailTemplate.html
@@ -7,7 +7,7 @@
     <p>Merhaba Sayin <?= mentorName ?> <?= mentorSurname ?>,</p>
     <p>Adayla yaptiginiz gorusme sonunda, asagida sundugumuz linkte yer alan formu, Proje Odevi Degerlendirme Kurulu'ndaki diger katilimcilarin da degerlendirmelerini ekleyerek doldurmanizi rica ederiz.</p>
 
-    <p>LINK: https://docs.google.com/forms/d/e/1FAIpQLSdswvLNnUHmxZf-MpPL8XVXjMWJOpu06tdeHvtxdvtvnd5NtQ/viewform?usp=sf_link<br>
+    <p>LINK: <?= evaluation2Link ?><br>
 
     <p>
     <u>Gorusme yapacaginiz Aday bilgileri:</u><br>
