--- a/VIT_Module/3-Calendar_AppScript_Installation/evaluationMailTemplate.html
+++ b/VIT_Module/3-Calendar_AppScript_Installation/evaluationMailTemplate.html
@@ -7,7 +7,7 @@
     <p>Merhaba Sayin <?= mentorName ?> <?= mentorSurname ?>,</p>
     <p>Basvuranla yaptiginiz gorusme sonunda, asagida sundugumuz linkte yer alan formu doldurmanizi rica ederiz.</p>
 
-    <p>LINK: https://docs.google.com/forms/d/e/1FAIpQLSc3EXB735dC2UieNq0zUB1Qb2aHb2fAtjZ2j9awPpzjDYdcwA/viewform?usp=sf_link<br>
+    <p>LINK: <?= evaluation1Link ?><br>
 
     <p>
     <u>Gorusme yapacaginiz basvuran bilgileri:</u><br>
