Tum kodlara bakim yapildi. Aradan gecen zamanin etkisiyle fark edilememis hatalar giderildi. Uygulamanin tasinabilirligini artirma yonunde Config sinifinin kullanimi artirildi. Kurulum dosyasinin hazirlanmasindan onceki en son bakim calismasidir!...

--- a/VIT_Module/3-Calendar_AppScript_Installation/projectHomeworkMailTemplate.html
+++ b/VIT_Module/3-Calendar_AppScript_Installation/projectHomeworkMailTemplate.html
@@ -8,7 +8,7 @@
     <p><strong><?= deadline ?></strong> tarihine kadar asagidaki odev projesi linkinde istenenleri kodlayarak, sizin icin olusturulan google drive klasorune yuklemenizi beklemekteyiz. Belirtilen saat ve tarihten sonra odevi yuklemeniz mumkun olmayacaktir, bu sebeple tarihe dikkat etmenizi oneririz.</p>
 
     <p>
-      <strong>Proje Odev Projesi Link &nbsp;&nbsp;:</strong> <?= projectHomeworkLink ?><br>
+      <strong>Proje Odevi Link &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</strong> <?= projectHomeworkLink ?><br>
       <strong>Google Drive Klasor Link:</strong> <?= sharedFolder ?>
 
     </p>
